--- a/src/views/athlete.hbs
+++ b/src/views/athlete.hbs
@@ -74,6 +74,59 @@
     <div class="container">
       {{!-- Mettre les ressources ici --}}
 
+      <div class="row align-items-center">
+        <div class="col">
+          <h1>Ajout d'un Athlete</h1>
+          <form action="/post-feedback" method="POST">
+            <div class="form-row">
+              <div class="col-md-4 mb-3">
+                <label for="validationDefault01">Nom de l'Athlete :</label>
+                <input type="text" class="form-control" id="name" placeholder="Arthur" required>
+              </div>
+              <div class="col-md-4 mb-3">
+                <label for="validationDefault02">Catégorie du Sport :</label>
+                <input type="text" class="form-control" id="category" placeholder="ex : Sport Individuel" required>
+              </div>
+            </div>
+            <div class="form-row">
+            </div>
+            <div class="form-group">
+            </div>
+            <button class="btn btn-primary" type="submit">Envoyer</button>
+          </form>
+        </div>
+        <div class="col">
+          <h1>Liste des Athletes</h1>
+          <form>
+            <div class="form-row">
+              <div class="col-md-4 mb-3">
+              </div>
+            </div>
+            <button class="btn btn-primary" type="submit" id="boutonGet" onclick="getListeSport()">Voir la
+              Liste</button>
+        </div>
+      </div>
+
+      {{!-- <form>
+        <div class="form-row">
+          <div class="col-md-4 mb-3">
+            <label for="validationDefault01">Nom du Sport :</label>
+            <input type="text" class="form-control" id="nomGame" placeholder="Mangeur de Chocolat" required>
+          </div>
+          <div class="col-md-4 mb-3">
+            <label for="validationDefault02">Catégorie du Sport :</label>
+            <input type="text" class="form-control" id="validationDefault02" placeholder="ex : Sport Individuel"
+              required>
+          </div>
+        </div>
+        <div class="form-row">
+        </div>
+        <div class="form-group">
+        </div>
+        <button class="btn btn-primary" type="submit">Envoyer</button>
+      </form> --}}
+
+
     </div>
   </main>
 
