Ajout choix pays Athletes

--- a/src/views/athlete.hbs
+++ b/src/views/athlete.hbs
@@ -87,6 +87,18 @@
                 <label for="validationDefault02">Catégorie du Sport :</label>
                 <input type="text" class="form-control" name="category" placeholder="ex : Sport Individuel" required>
               </div>
+
+              <div class="col-md-4 mb-3">
+                <label for="inputState">State</label>
+                <select id="inputState" name="country" class="form-select">
+                  <option selected>Choisir un Pays</option>
+                  <option value="DE">Allemagne 🇩🇪</option>
+                  <option value="BE">Belgique 🇧🇪</option>
+                  <option value="CA">Canada 🇨🇦</option>
+                  <option value="FR">France 🇫🇷</option>
+                  <option value="JP">Japon 🇯🇵</option>
+                </select>
+              </div>
             </div>
             <div class="form-row">
             </div>
@@ -136,10 +148,10 @@
     <div class="container p-4">
       <!-- Section: Social media -->
       <section class="mb-4">
-        
+
         <!-- Github -->
         <a class="m-1" href="https://github.com/MikaPST/TP-OlympiquesGame.git">
-        <img src="https://imglink.io/ib/Dxc8h8SGHQ.png"  style="max-height : 80px" alt="Logo Github">
+          <img src="https://imglink.io/ib/Dxc8h8SGHQ.png" style="max-height : 80px" alt="Logo Github">
         </a>
 
       </section>
