--- a/src/views/athlete.hbs
+++ b/src/views/athlete.hbs
@@ -80,17 +80,17 @@
           <form action="/api/athletes" method="POST">
             <div class="form-row">
               <div class="col-md-4 mb-2">
-                <label for="validationDefault01">Nom de l'Athlete :</label>
-                <input type="text" class="form-control" name="name" placeholder="Arthur" required>
+                <label for="validationDefault01">Prénom de l'Athlete :</label>
+                <input type="text" class="form-control" name="firstname" placeholder="Arthur" required>
               </div>
               <div class="col-md-4 mb-2">
-                <label for="validationDefault02">Prénom de l'Athlete :</label>
-                <input type="text" class="form-control" name="firstname" placeholder="DUPOND" required>
+                <label for="validationDefault02">Nom de l'Athlete :</label>
+                <input type="text" class="form-control" name="name" placeholder="DUPOND" required>
               </div>
               <div class="col-md-4 mb-2">
-                <input class="form-check-input" type="radio" id="homme" name="genre" value="homme" checked>
+                <input class="form-check-input" type="radio" id="homme" name="genre" value="Homme" checked>
                 <label style="margin-right: 30px" for="huey">Homme</label>
-                <input class ="form-check-input" type="radio" id="femme" name="genre" value="femme">
+                <input class ="form-check-input" type="radio" id="femme" name="genre" value="Femme">
                 <label for="dewey">Femme</label>
               </div>
               <div class="col-md-4 mb-2">
@@ -98,7 +98,7 @@
                 <input type="text" class="form-control" name="category" placeholder="ex : Sport Individuel" required>
               </div>
               <div class="col-md-4 mb-3">
-                <label for="inputState">State</label>
+                <label for="inputState">Pays</label>
                 <select id="inputState" name="country" class="form-select">
                   <option selected>Choisir un Pays</option>
                   <option value="DE">Allemagne 🇩🇪</option>
