--- a/src/views/athlete.hbs
+++ b/src/views/athlete.hbs
@@ -88,10 +88,10 @@
                 <input type="text" class="form-control" name="firstname" placeholder="DUPOND" required>
               </div>
               <div class="col-md-4 mb-2">
-                <input class="form-check-input" type="radio" id="homme" name="genre" value="homme" checked>
+                <input class="form-check-input" type="radio" id="homme" name="genre" value="MALE" checked>
                 <label style="margin-right: 30px" for="huey">Homme</label>
-                <input class ="form-check-input" type="radio" id="femme" name="genre" value="femme">
-                <label for="dewey">Femme</label>
+                <input class ="form-check-input" type="radio" id="femme" name="genre" value="FEMALE">
+                <label for="dewey">Femme</label> 
               </div>
               <div class="col-md-4 mb-2">
                 <label for="validationDefault03">Catégorie du Sport :</label>
