add page home index

--- a/src/views/athlete.hbs
+++ b/src/views/athlete.hbs
@@ -168,8 +168,8 @@
 
       <!-- Section: Text -->
       <section class="mb-4">
-        <p>
-          Rejoignez-nous sur Github !
+        <p style="font-size: 20px;">
+          <strong>Rejoignez-nous sur Github !</strong>
         </p>
       </section>
       <!-- Section: Text -->
