--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -82,15 +82,11 @@
 
       <div class="contenair">
         <div class="row d-flex justify-content-center">
-          <button class="btn btn-primary col-2" style="margin-right: 8em" type="submit" id="boutonGet"
-            onclick="getListeSport()">Voir les Sports</button>
-            <button class="btn btn-primary col-2" style="margin-lef: 8em" type="submit" id="boutonGet"
-            onclick="getListeSport()">Voir les Athletes</button>
+          <a class="btn btn-primary col-2" style="margin-right: 8em" href="http://localhost:3000/api/sports"><strong>Voir les Sports</strong></a>
+          {{!-- <button class="btn btn-primary col-2" style="margin-right: 8em" type="submit" id="boutonGet"
+            action="https://localhost:3000/api/sports/">Voir les Sports</button> --}}
+            <a class="btn btn-primary col-2" href="http://localhost:3000/api/athletes"><strong>Voir les Athletes</strong></a>
         </div>
-        {{!-- <div class="row">
-          <button class="btn btn-primary col-5" style="margin-lef: 15px" type="submit" id="boutonGet"
-            onclick="getListeSport()">Voir les Athletes</button>
-        </div> --}}
 
       </div>
     </div>
