--- a/src/views/sport.hbs
+++ b/src/views/sport.hbs
@@ -74,16 +74,16 @@
     <div class="container">
       {{!-- Mettre les ressources ici --}}
 
-      <div class="row justify-content-center">
-        <div class="col-5">
+      <div class="row justify-content-center" style="margin-bottom: 50px;">
+        <div class="col-4">
           <h1>Ajout d'un Sport</h1>
           <form action="/api/sports" method="POST">
             <div class="form-row">
-              <div class="col-md-4 mb-3">
+              <div class="col-md-9 mb-3">
                 <label for="validationDefault01">Nom du Sport :</label>
                 <input type="text" class="form-control" name="name" placeholder="Mangeur de Chocolat" required>
               </div>
-              <div class="col-md-4 mb-3">
+              <div class="col-md-9 mb-3">
                 <label for="validationDefault02">Catégorie du Sport :</label>
                 <input type="text" class="form-control" name="category" placeholder="ex : Sport Individuel" required>
               </div>
@@ -92,7 +92,7 @@
             </div>
             <div class="form-group">
             </div>
-            <button class="btn btn-primary" type="submit">Envoyer</button>
+            <button class="btn btn-primary col-md-9" type="submit">Envoyer</button>
           </form>
         </div>
       </div>
