Ajout ajout de athlètes sur sports

--- a/src/views/sport-athletes.hbs
+++ b/src/views/sport-athletes.hbs
@@ -171,9 +171,7 @@
 
    function loadSay(sportId){
 
-     console.log(document.getElementById("inputAddAthlete").value);
-
-    fetch('/api/sports/'+sportId+'/athletes/'+document.getElementById("inputAddAthlete").value)
+    fetch('/api/sports/'+sportId+'/athletes/'+document.getElementById("inputAddAthlete").value, {method:'POST'})
    }
   </script>
 
