--- a/src/views/sport.hbs
+++ b/src/views/sport.hbs
@@ -105,7 +105,7 @@
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">{{name}}</h5>
-                  <p class="card-text">Catégorie : {{category}} {{_id}} </p>
+                  <p class="card-text">Catégorie : {{category}} </p>
                   <a href="/api/sports/{{_id}}/athletes" class="btn btn-primary">Athlètes</a>
                 </div>
               </div>
