--- a/src/views/athlete.hbs
+++ b/src/views/athlete.hbs
@@ -116,37 +116,26 @@
             <button class="btn btn-primary" type="submit">Envoyer</button>
           </form>
         </div>
-        <div class="col">
-          <h1>Liste des Athletes</h1>
-          <form>
-            <div class="form-row">
-              <div class="col-md-4 mb-3">
-              </div>
-            </div>
-            <button class="btn btn-primary" type="submit" id="boutonGet" onclick="getListeSport()">Voir la
-              Liste</button>
-        </div>
       </div>
 
-      {{!-- <form>
-        <div class="form-row">
-          <div class="col-md-4 mb-3">
-            <label for="validationDefault01">Nom du Sport :</label>
-            <input type="text" class="form-control" id="nomGame" placeholder="Mangeur de Chocolat" required>
+      <div class="row">
+        <div class="col">
+          <div class="row my-2">
+            <h1>Liste des Athlètes</h1>
+            {{#each listAthletes}}
+            <div class="col-3 my-2">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">{{this.firstName}}{{this.lastName}}</h5>
+                  <p class="card-text">Pays : {{this.country}} </p>
+                  <a href="/api/athletes/{{_id}}/sports" class="btn btn-primary">Sports</a>
+                </div>
+              </div>
+            </div>
+            {{/each}}
           </div>
-          <div class="col-md-4 mb-3">
-            <label for="validationDefault02">Catégorie du Sport :</label>
-            <input type="text" class="form-control" id="validationDefault02" placeholder="ex : Sport Individuel"
-              required>
-          </div>
         </div>
-        <div class="form-row">
-        </div>
-        <div class="form-group">
-        </div>
-        <button class="btn btn-primary" type="submit">Envoyer</button>
-      </form> --}}
-
+      </div>
 
     </div>
   </main>
