--- a/src/views/athlete.hbs
+++ b/src/views/athlete.hbs
@@ -74,30 +74,30 @@
     <div class="container">
       {{!-- Mettre les ressources ici --}}
 
-      <div class="row align-items-center">
-        <div class="col">
+      <div class="row justify-content-center" style="margin-bottom: 50px;">
+        <div class="col-md-4">
           <h1>Ajout d'un Athlete</h1>
           <form action="/api/athletes" method="POST">
             <div class="form-row">
-              <div class="col-md-4 mb-2">
+              <div class="col-md-9 mb-1">
                 <label for="validationDefault01">Prénom de l'Athlete :</label>
                 <input type="text" class="form-control" name="firstname" placeholder="Arthur" required>
               </div>
-              <div class="col-md-4 mb-2">
+              <div class="col-md-9 mb-1">
                 <label for="validationDefault02">Nom de l'Athlete :</label>
                 <input type="text" class="form-control" name="name" placeholder="DUPOND" required>
               </div>
-              <div class="col-md-4 mb-2">
+              <div class="col-md-9 mb-1">
                 <input class="form-check-input" type="radio" id="homme" name="genre" value="MALE" checked>
                 <label style="margin-right: 30px" for="huey">Homme</label>
                 <input class ="form-check-input" type="radio" id="femme" name="genre" value="FEMALE">
                 <label for="dewey">Femme</label> 
               </div>
-              <div class="col-md-4 mb-2">
+              <div class="col-md-9 mb-1">
                 <label for="validationDefault03">Catégorie du Sport :</label>
                 <input type="text" class="form-control" name="category" placeholder="ex : Sport Individuel" required>
               </div>
-              <div class="col-md-4 mb-3">
+              <div class="col-md-9 mb-1">
                 <label for="inputState">Pays</label>
                 <select id="inputState" name="country" class="form-select">
                   <option selected>Choisir un Pays</option>
@@ -113,7 +113,7 @@
             </div>
             <div class="form-group">
             </div>
-            <button class="btn btn-primary" type="submit">Envoyer</button>
+            <button class="btn btn-primary col-md-9" style="margin-top: 20px;" type="submit">Envoyer</button>
           </form>
         </div>
       </div>
@@ -126,7 +126,8 @@
             <div class="col-3 my-2">
               <div class="card">
                 <div class="card-body">
-                  <h5 class="card-title">{{this.firstName}}{{this.lastName}}</h5>
+                  <h5 class="card-title">{{this.firstName}} {{this.lastName}}</h5>
+                  <p class="card-text">Genre : {{this.gender}} </p>
                   <p class="card-text">Pays : {{this.country}} </p>
                   <a href="/api/athletes/{{_id}}/sports" class="btn btn-primary">Sports</a>
                 </div>
