--- a/src/views/sport-athletes.hbs
+++ b/src/views/sport-athletes.hbs
@@ -71,7 +71,7 @@
       <div class="row">
         <div class="col">
           <div class="row my-2">
-            <h1>Liste des Athlètes</h1>
+            <h1 style="text-align: center;">Liste des Athlètes</h1>
             {{#if sport.athletes}}
             {{#each sportAthletes}}
             <div class="col-3 my-2">
@@ -85,13 +85,13 @@
             </div>
             {{/each}}
             {{else}}
-            <h3>Aucun Athlète n'est renseigné pour ce sport !</h3>
+            <h5 style="text-align: center;"><i>Aucun Athlète n'est renseigné pour ce sport !</i></h5>
             {{/if}}
 
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row" style="margin-top: 30px;">
 
         <div class="row justify-content-center">
           <div class="col-5">
