--- a/src/views/athlete.hbs
+++ b/src/views/athlete.hbs
@@ -84,8 +84,8 @@
               <div class="col-md-9 mb-1">
                 <input class="form-check-input" type="radio" id="homme" name="genre" value="MALE" checked>
                 <label style="margin-right: 30px" for="huey">Homme</label>
-                <input class ="form-check-input" type="radio" id="femme" name="genre" value="FEMALE">
-                <label for="dewey">Femme</label> 
+                <input class="form-check-input" type="radio" id="femme" name="genre" value="FEMALE">
+                <label for="dewey">Femme</label>
               </div>
               <div class="col-md-9 mb-1">
                 <label for="validationDefault03">Catégorie du Sport :</label>
@@ -116,18 +116,23 @@
         <div class="col">
           <div class="row my-2">
             <h1>Liste des Athlètes</h1>
-            {{#each listAthletes}}
-            <div class="col-3 my-2">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">{{this.firstName}} {{this.lastName}}</h5>
-                  <p class="card-text">Genre : {{this.gender}} </p>
-                  <p class="card-text">Pays : {{this.country}} </p>
-                  <a href="/api/athletes/{{_id}}/sports" class="btn btn-primary">Sports</a>
+            {{#if listAthletes}}
+              {{#each listAthletes}}
+              <div class="col-3 my-2">
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title">{{this.firstName}} {{this.lastName}}</h5>
+                    <p class="card-text">Genre : {{this.gender}} </p>
+                    <p class="card-text">Pays : {{this.country}} </p>
+                    <a href="/api/athletes/{{_id}}/sports" class="btn btn-primary">Sports</a>
+                  </div>
                 </div>
               </div>
-            </div>
-            {{/each}}
+              {{/each}}
+              {{else}}
+              <h5 style="text-align: center;"><i>Aucun Athlète n'est renseigné pour le moment !</i></h5>
+            {{/if}}
+            
           </div>
         </div>
       </div>
