edit view sport-atheltes and athletes-sport

--- a/src/views/sport-athletes.hbs
+++ b/src/views/sport-athletes.hbs
@@ -68,7 +68,7 @@
     <div class="container">
       {{!-- Mettre les ressources ici --}}
 
-      <div class="row">
+      <div class="row" style="margin-bottom: 150px;">
         <div class="col">
           <div class="row my-2">
             <h1 style="text-align: center;">Liste des Athlètes</h1>
@@ -85,7 +85,7 @@
             </div>
             {{/each}}
             {{else}}
-            <h5 style="text-align: center;"><i>Aucun Athlète n'est renseigné pour ce sport !</i></h5>
+            <h5 style="text-align: center; margin-top: 25px;"><i>Aucun Athlète n'est renseigné pour ce sport !</i></h5>
             {{/if}}
 
           </div>
