--- a/src/views/athlete-sports.hbs
+++ b/src/views/athlete-sports.hbs
@@ -68,10 +68,10 @@
     <div class="container">
       {{!-- Mettre les ressources ici --}}
 
-      <div class="row">
+      <div class="row" style="margin-bottom: 150px;">
         <div class="col">
           <div class="row my-2">
-            <h1 style="text-align: center;">Liste des Sports de l'Athlète</h1>
+            <h1 style="text-align: center; margin-top: 25px;">Liste des Sports de l'Athlète</h1>
             {{#if listSports}}
             {{#each listSports}}
             <div class="col-3 my-2">
